syntax = "proto3";
option java_multiple_files = true;
package com.isc.mcb.rpc.bse;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

message BasicInfoMessage {
    google.protobuf.Int64Value id = 1;
    google.protobuf.Int32Value code = 2;
    google.protobuf.StringValue name = 3;
    google.protobuf.StringValue englishName = 4;
    google.protobuf.BoolValue isActive = 5;
}

message BasicInfoDataOutputList {
    repeated BasicInfoMessage items = 1;
}

service BasicInfoService {
    rpc getBasicInfoById (google.protobuf.Int64Value) returns (BasicInfoMessage);
    rpc insertBasicInfo (BasicInfoMessage) returns (google.protobuf.Empty);
    rpc getAllBasicInfo (google.protobuf.Empty) returns (BasicInfoDataOutputList);
}

